2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/users.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/auth.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/locks.c: Replaced use of includes.h
	by respective direct includes.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/log.c: Replaced use of includes.h
	by respective direct includes.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/rules.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/comm.c: Removed uselsess defines of FALSE and TRUE.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/comm.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/parser.c: Removed TODO as it refers to
	openvas-client which is not relevant anymore in this case.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/parser.c: Replaced use of includes.h
	by respective direct includes.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/pluginscheduler.c (scheduler_plugin_score,
	scheduler_plugin_best_score): Removed functions that
	were disabled and marked as broken anyway.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/pluginscheduler.c: Replaced use of includes.h
	by respective direct includes.

2010-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
