@@ -1,5 +1,10 @@
 2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	* openvassd/hosts.c: Replaced use of includes.h
+	by respective direct includes.
+
+2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	* openvassd/users.c: Replaced use of includes.h
 	by respective direct includes. Replaced occurences of EXIT()
 	by exit().
